[package]
name = "http2socks"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/cssivision/http2socks"
homepage = "https://github.com/cssivision/http2socks"
authors = ["cssivision <cssivision@gmail.com>"]
description = "http to socks proxy."
readme = "README.md"
edition = "2018"

[dependencies]
awak = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
hyper = { version = "1", features = ["client", "server", "http1"] }
http = "1"
bytes = "1"
http-body-util = "0.1"
log = "0.4"
env_logger = "0.11"
serde = "1.0"
serde_derive = "1.0"
getopts = "0.2"
base64 = "0.22"
toml = "0.8"
async-pool = { git = "https://github.com/cssivision/async-pool.git" }
hyper-rt = "0.1"
